# gitmux

./: Cargo.toml  README.md  config.json  gitmux.sh  rust-toolchain.toml
src/: cli.rs  config.rs  fs.rs  fzf.rs  main.rs  selectors.rs  tmux.rs
