[package]
name = "pfp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# walkdir = "2.3.3"
# glob = "0.3.1"
serde = { version = "1", features = ["derive"] }
# serde_json = "1"
serde_jsonc = "1"
regex = "1"
clap = "4"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
exitcode = "1.1.2"
thiserror = "1.0.49"
