[package]
name = "pfp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_jsonc = "1"
regex = "1"
clap = "4"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
exitcode = "1.1.2"
thiserror = "1.0.49"
